--- a/css/styles.css
+++ b/css/styles.css
@@ -48,9 +48,8 @@
     background-color: dodgerblue;
     color: white;
   }
-  
-  .header-right {
-    float: right;
+  .header-right a {
+    font-size: 40px;
   }
   
 
@@ -67,6 +66,11 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.container h1 {
+  color: white;
+  text-align: center;
+  padding: 15px 10px;
 }
 .reto-1 {
     width: 80%;
@@ -210,6 +214,36 @@ h2 {
   
   }
 
+/* Footer styles */
+.social {
+  padding: 10px 15px;
+  width: 80%;
+  max-width: 1000px;
+}
+.social ul {
+  list-style: none;
+}
+.social a {
+  text-decoration: none;
+  color: white;
+}
+.social a i {
+  font-size: 100px;
+}
+.social-list {
+  display: flex;
+  justify-content: center;
+  border-top: 1px #777 solid;
+  padding-top: 1.25rem;
+}
+.social-list li {
+  margin: 0.5rem;
+  padding: 10px;
+  font-size: 1.25rem;
+}
+/* End Footer Styles */
+
+
 /* Media query mobile */
 @media screen and (max-width: 500px) {
   .header {
@@ -252,5 +286,8 @@ h2 {
     font-size: 20px;
     font-weight: bold;
   }
+  .social a i {
+    font-size: 60px;
+  } 
 }
   
